<?xml version="1.0"?>
<package>
  <name>pan_tilt</name>
  <version>1.0.0</version>

  <description>
    The RoadNarrows Robotics pan-tilt mechanism ROS metapackage
    - provides complete hekateros software bundle.
  </description>

  <author email="robin.knight@roadnarrows.com">robin knight</author>
  <author email="daniel@roadnarrows.com">daniel packard</author>
  <maintainer email="daniel@roadnarrows.com">daniel packard</maintainer>
  <license>BSD</license>

  <url type="website">http://roadnarrows.com</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <run_depend>pan_tilt_moveit</run_depend> -->

  <export>
    <metapackage/>
  </export>

</package>
