<?xml version="1.0"?>
<package>
  <name>pan_tilt</name>
  <version>1.1.0</version>

  <description>
    The RoadNarrows Robotics Pan-Tilt mechanism ROS metapackage
    - provides complete Pan-Tilt software bundle.
  </description>

  <author email="robin.knight@roadnarrows.com">Robin Knight</author>
  <maintainer email="robin.knight@roadnarrows.com">Robin Knight</maintainer>
  <license>MIT</license>

  <url type="website">http://githum.com/roadnarrows-robotics/pan_tilt</url>
  <url type="website">http://roadnarrows.com</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>libpan_tilt</run_depend>
  <run_depend>pan_tilt_control</run_depend>
  <run_depend>pan_tilt_desc</run_depend>
  <run_depend>pan_tilt_moveit</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
